--- a/nivel_02/backend/.eslintrc.json
+++ b/nivel_02/backend/.eslintrc.json
@@ -6,7 +6,7 @@
   "extends": [
     "airbnb-base",
     "plugin:@typescript-eslint/recommended",
-    "prettier/@typescrip-eslint",
+    "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
   "globals": {
