--- a/nivel_05/frontend/.eslintrc.json
+++ b/nivel_05/frontend/.eslintrc.json
@@ -41,6 +41,7 @@
       "error",
       { "allowExpressions": true }
     ],
+    "@typescript-eslint/camelcase": "off",
     "import/prefer-default-export": "off",
     "react/jsx-filename-extension": [
       "warn",
