--- a/nivel_05/frontend/.eslintrc.json
+++ b/nivel_05/frontend/.eslintrc.json
@@ -43,6 +43,7 @@
     ],
     "@typescript-eslint/camelcase": "off",
     "import/prefer-default-export": "off",
+    "import/no-duplicates": "off",
     "react/jsx-filename-extension": [
       "warn",
       { "extensions": [".js", ".jsx", ".tsx"] }
