--- a/nivel_05/mobile/appgobarber/.eslintrc.json
+++ b/nivel_05/mobile/appgobarber/.eslintrc.json
@@ -36,6 +36,7 @@
     "no-unused-expressions": "off",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
+    "react/jsx-one-expression-per-line": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       { "allowExpressions": true }
