--- a/nivel_05/mobile/appgobarber/.eslintrc.json
+++ b/nivel_05/mobile/appgobarber/.eslintrc.json
@@ -37,6 +37,7 @@
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
     "react/jsx-one-expression-per-line": "off",
+    "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       { "allowExpressions": true }
