--- a/nivel_05/mobile/appgobarber/.eslintrc.json
+++ b/nivel_05/mobile/appgobarber/.eslintrc.json
@@ -43,6 +43,7 @@
       { "allowExpressions": true }
     ],
     "import/prefer-default-export": "off",
+    "import/no-duplicates": "off",
     "react/jsx-filename-extension": [
       "warn",
       { "extensions": [".js", ".jsx", ".tsx"] }
